--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "serve": "gitbook serve ./ ./docs",
     "book": "gitbook init",
     "down": "gitbook install"
+  },
+  "engines": {
+    "node": "10.23.0"
   }
 }
