--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "serve": "gitbook serve ./ ./docs",
+    "start": "gitbook serve ./ ./docs",
     "book": "gitbook init",
     "down": "gitbook install"
   },
